--- a/WolvenKit.App/Controls/AddPathDialogView.xaml
+++ b/WolvenKit.App/Controls/AddPathDialogView.xaml
@@ -1,14 +1,17 @@
-<catel:UserControl x:Class="WolvenKit.Controls.AddPathDialogView"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:hc="https://handyorg.github.io/handycontrol"
-             xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
-             xmlns:feather="clr-namespace:Feather.Controls;assembly=Feather.Controls"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             mc:Ignorable="d"
-             xmlns:catel="http://schemas.catelproject.com"
-             d:DesignHeight="450" d:DesignWidth="800">
+<catel:UserControl
+ x:Class="WolvenKit.Controls.AddPathDialogView"
+ xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+ xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+ xmlns:catel="http://schemas.catelproject.com"
+ xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+ xmlns:feather="clr-namespace:Feather.Controls;assembly=Feather.Controls"
+ xmlns:hc="https://handyorg.github.io/handycontrol"
+ xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
+ xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+ d:DesignHeight="450"
+ d:DesignWidth="800"
+ mc:Ignorable="d"
+ >
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -18,43 +21,50 @@
     </UserControl.Resources>
     <Grid x:Name="AddPathDialogGrid">
         <Button
-                             Margin="0,0,250,0"
-                             HorizontalAlignment="Right"
-                             Command="{Binding OpenDialogCommand}"
-                             >
+         Margin="0,0,0,0"
+         HorizontalAlignment="Left"
+         Command="{Binding OpenDialogCommand}"
+         >
             <iconPacks:PackIconCodicons
-                             Grid.Row="0"
-                             Width="15"
-                             Height="15"
-                             Margin="0,0,0,0"
-                             HorizontalAlignment="Center"
-                             VerticalAlignment="Center"
-                             Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}"
-                             Kind="FolderOpened"
-                             Spin="False"
-                             SpinAutoReverse="False" />
+             Grid.Row="0"
+             Width="15"
+             Height="15"
+             Margin="0,0,0,0"
+             HorizontalAlignment="Center"
+             VerticalAlignment="Center"
+             Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}"
+             Kind="FolderOpened"
+             Spin="False"
+             SpinAutoReverse="False"
+             />
         </Button>
         <hc:TextBox
-                             x:Name="filePathTextBox"
-                             Width="250"
-                             Margin="0,0,0,9"
-                             HorizontalAlignment="Right"
-                             hc:InfoElement.Necessary="True"
-                             Text="{Binding Path}"
-                             ToolTipService.ToolTip="Add the path of an executable here."
-                             ToolTipService.IsEnabled="True"
-                             Style="{StaticResource TextBoxExtendCustom}"
-                             VerifyFunc="VerifyFile" >
-
-        </hc:TextBox>
+         x:Name="filePathTextBox"
+         Width="auto"
+         Margin="37,-7,0,3"
+         HorizontalAlignment="Stretch"
+         VerticalAlignment="Center"
+         hc:InfoElement.Necessary="True"
+         Style="{StaticResource TextBoxExtendCustom}"
+         Text="{Binding Path}"
+         ToolTipService.IsEnabled="True"
+         ToolTipService.ToolTip="Add the path of an executable here."
+         VerifyFunc="VerifyFile"
+         />
         <Popup
-                x:Name="notification"
-                StaysOpen="False"
-                PlacementTarget="{Binding ElementName=filePathTextBox}"
-                Placement="Bottom"
-                Width="{Binding ActualWidth, ElementName=filePathTextBox}"
-                >
-            <TextBlock TextAlignment="Center" FontSize="14" Background="Green">Saved!</TextBlock>
+         x:Name="notification"
+         Width="{Binding ActualWidth, ElementName=filePathTextBox}"
+         Placement="Bottom"
+         PlacementTarget="{Binding ElementName=filePathTextBox}"
+         StaysOpen="False"
+         >
+            <TextBlock
+             Background="Green"
+             FontSize="14"
+             TextAlignment="Center"
+             >
+                Saved!
+            </TextBlock>
         </Popup>
     </Grid>
 </catel:UserControl>
