--- a/WolvenKit/Views/Editor/Basic/PropertiesView.xaml
+++ b/WolvenKit/Views/Editor/Basic/PropertiesView.xaml
@@ -13,6 +13,7 @@
     xmlns:editor="clr-namespace:WolvenKit.ViewModels.Editor;assembly=WolvenKit.App"
     xmlns:ei="http://schemas.microsoft.com/xaml/behaviors"
     xmlns:hc="https://handyorg.github.io/handycontrol"
+    xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:model="clr-namespace:WolvenKit.Models;assembly=WolvenKit.App"
     xmlns:syncfusion="http://schemas.syncfusion.com/wpf"
@@ -174,62 +175,88 @@
                         </Expander>
                     </StackPanel>
 
-                    <Border
-                        Margin="5"
+                    <syncfusion:DropDownButton
                         HorizontalAlignment="Right"
-                        VerticalAlignment="Bottom"
-                        Background="#55FFFFFF"
-                        BorderBrush="Black"
-                        BorderThickness="2"
-                        Visibility="Collapsed">
-                        <StackPanel Margin="10,5" Orientation="Vertical">
+                        VerticalAlignment="Top"
+                        Label="Options">
+                        <syncfusion:DropDownButton.IconTemplate>
+                            <DataTemplate>
+                                <iconPacks:PackIconRemixIcon
+                                    Width="12"
+                                    HorizontalAlignment="Center"
+                                    VerticalAlignment="Center"
+                                    Kind="Settings2Fill" />
+                            </DataTemplate>
 
-                            <Button
-                                Name="LoadButton"
-                                Height="26"
-                                Margin="0,10,0,0"
-                                Click="LoadButton_OnClick"
-                                Content="Load file"
-                                IsDefault="True" />
+                        </syncfusion:DropDownButton.IconTemplate>
+                        <Border
+                            Margin="5"
+                            HorizontalAlignment="Right"
+                            VerticalAlignment="Bottom"
+                            Background="Black"
+                            BorderBrush="Black"
+                            BorderThickness="2"
+                            Visibility="Visible">
+                            <StackPanel Margin="10,5" Orientation="Vertical">
 
-                            <TextBlock
-                                Margin="0,10,0,0"
-                                VerticalAlignment="Center"
-                                FontWeight="Bold"
-                                Text="(or drag and drop 3D model file)" />
+                                <Button
+                                    Name="LoadButton"
+                                    Height="26"
+                                    Margin="0,10,0,0"
+                                    HorizontalAlignment="Left"
+                                    Click="LoadButton_OnClick"
+                                    Content="Load file"
+                                    IsDefault="True"
+                                    Visibility="Collapsed" />
 
-                            <CheckBox
-                                Name="ShowWireframeCheckBox"
-                                Margin="0,10,0,0"
-                                Checked="OnShowWireframeCheckBoxCheckedChanged"
-                                Content="Show wireframe"
-                                IsChecked="True"
-                                Unchecked="OnShowWireframeCheckBoxCheckedChanged" />
-                            <CheckBox
-                                Name="AddLineDepthBiasCheckBox"
-                                Margin="0,4,0,0"
-                                Checked="OnAddLineDepthBiasCheckBoxCheckedChanged"
-                                Content="Add line depth bias (DXEngine only)"
-                                IsChecked="True"
-                                IsEnabled="{Binding ElementName=ShowWireframeCheckBox, Path=IsChecked}"
-                                Unchecked="OnAddLineDepthBiasCheckBoxCheckedChanged" />
-                            <CheckBox
-                                Name="ReadPolygonIndicesCheckBox"
-                                Margin="0,4,0,0"
-                                Checked="OnReadPolygonIndicesCheckBoxCheckedChanged"
-                                Content="Read PolygonIndices"
-                                IsChecked="True"
-                                ToolTip="When checked ReaderObj will read PolygonIndices collection that can be used to show polygons instead of triangles. Object need to be shown with wireframe to see the difference."
-                                Unchecked="OnReadPolygonIndicesCheckBoxCheckedChanged" />
+                                <TextBlock
+                                    Margin="0,10,0,0"
+                                    VerticalAlignment="Center"
+                                    FontWeight="Bold"
+                                    Text="(or drag and drop 3D model file)"
+                                    Visibility="Collapsed" />
 
-                            <Button
-                                Name="ShowInfoButton"
-                                Margin="0,20,0,0"
-                                Click="ShowInfoButton_OnClick"
-                                Content="Show objects info"
-                                IsEnabled="False" />
-                        </StackPanel>
-                    </Border>
+                                <CheckBox
+                                    Name="ShowWireframeCheckBox"
+                                    Margin="0,10,0,0"
+                                    HorizontalAlignment="Left"
+                                    Checked="OnShowWireframeCheckBoxCheckedChanged"
+                                    Content="Show wireframe"
+                                    IsChecked="True"
+                                    Style="{DynamicResource MahApps.Styles.CheckBox.DataGrid.Win10}"
+                                    Unchecked="OnShowWireframeCheckBoxCheckedChanged" />
+                                <CheckBox
+                                    Name="AddLineDepthBiasCheckBox"
+                                    Margin="0,4,0,0"
+                                    HorizontalAlignment="Left"
+                                    Checked="OnAddLineDepthBiasCheckBoxCheckedChanged"
+                                    Content="Add line depth bias (DXEngine only)"
+                                    IsChecked="True"
+                                    IsEnabled="{Binding ElementName=ShowWireframeCheckBox, Path=IsChecked}"
+                                    Style="{DynamicResource MahApps.Styles.CheckBox.DataGrid.Win10}"
+                                    Unchecked="OnAddLineDepthBiasCheckBoxCheckedChanged" />
+                                <CheckBox
+                                    Name="ReadPolygonIndicesCheckBox"
+                                    Margin="0,4,0,0"
+                                    HorizontalAlignment="Left"
+                                    Checked="OnReadPolygonIndicesCheckBoxCheckedChanged"
+                                    Content="Read PolygonIndices"
+                                    IsChecked="True"
+                                    Style="{DynamicResource MahApps.Styles.CheckBox.DataGrid.Win10}"
+                                    ToolTip="When checked ReaderObj will read PolygonIndices collection that can be used to show polygons instead of triangles. Object need to be shown with wireframe to see the difference."
+                                    Unchecked="OnReadPolygonIndicesCheckBoxCheckedChanged" />
+
+                                <Button
+                                    Name="ShowInfoButton"
+                                    Margin="0,20,0,0"
+                                    Click="ShowInfoButton_OnClick"
+                                    Content="Show objects info"
+                                    IsEnabled="False" />
+                            </StackPanel>
+                        </Border>
+                    </syncfusion:DropDownButton>
+
+
                 </Grid>
             </syncfusion:TabItemExt>
 
