--- a/WolvenKit/Views/Editor/Tools/ImportExportView.xaml
+++ b/WolvenKit/Views/Editor/Tools/ImportExportView.xaml
@@ -1,18 +1,17 @@
 <catel:UserControl
- x:Class="WolvenKit.Views.Editor.ImportExportView"
- xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
- xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
- xmlns:catel="http://schemas.catelproject.com"
- xmlns:hc="https://handyorg.github.io/handycontrol"
- xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
- xmlns:po="http://schemas.microsoft.com/winfx/2006/xaml/presentation/options"
- xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
- xmlns:syncfusion="http://schemas.syncfusion.com/wpf"
- xmlns:editor="clr-namespace:WolvenKit.ViewModels.Editor;assembly=WolvenKit.App"
- xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
- d:DataContext="{d:DesignInstance Type=editor:ImportExportViewModel}"
- mc:Ignorable="d"
- >
+    x:Class="WolvenKit.Views.Editor.ImportExportView"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:catel="http://schemas.catelproject.com"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:editor="clr-namespace:WolvenKit.ViewModels.Editor;assembly=WolvenKit.App"
+    xmlns:hc="https://handyorg.github.io/handycontrol"
+    xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:po="http://schemas.microsoft.com/winfx/2006/xaml/presentation/options"
+    xmlns:syncfusion="http://schemas.syncfusion.com/wpf"
+    d:DataContext="{d:DesignInstance Type=editor:ImportExportViewModel}"
+    mc:Ignorable="d">
 
 
     <Grid>
@@ -30,10 +29,9 @@
 
         <!--  Main Grid  -->
         <Grid
-         Grid.RowSpan="4"
-         Grid.ColumnSpan="4"
-         Background="Gray"
-         >
+            Grid.RowSpan="4"
+            Grid.ColumnSpan="4"
+            Background="Gray">
             <Grid.RowDefinitions>
                 <RowDefinition Height="auto" />
                 <RowDefinition Height="*" />
@@ -42,67 +40,101 @@
             </Grid.RowDefinitions>
 
 
+            <!--  Switch Views  -->
+            <Grid Grid.Row="0" Background="{DynamicResource ContentBackgroundAlt2}">
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Text=" VIEW : " />
+                    <RadioButton
+                        x:Name="ImportCheckBox"
+                        Margin="5,0,5,0"
+                        Background="Transparent"
+                        Content="IMPORTABLES"
+                        IsChecked="True" />
+                    <RadioButton
+                        x:Name="ExportCheckBox"
+                        Background="Transparent"
+                        Content="EXPORTABLES" />
 
-            <!--  Data Grid  -->
-            <syncfusion:SfDataGrid Grid.Row="1"
-                    ItemsSource="{Binding Items}"
-                    AutoGenerateColumns="False"
-                    ColumnSizer="AutoLastColumnFill"
-                    AllowResizingColumns="True"
-                    AllowEditing="False"
-                    AllowFiltering="True"
-                    AllowSorting="True"
-                    SelectionMode="Extended"
-                    
-                                   >
+                </StackPanel>
+            </Grid>
+
+            <!--  Data Grid Exports (OG)  -->
+            <syncfusion:SfDataGrid
+                Grid.Row="1"
+                AllowEditing="False"
+                AllowFiltering="True"
+                AllowResizingColumns="True"
+                AllowSorting="True"
+                AutoGenerateColumns="False"
+                ColumnSizer="AutoLastColumnFill"
+                ItemsSource="{Binding Items}"
+                SelectionMode="Extended"
+                Visibility="{Binding Path=IsChecked, ElementName=ExportCheckBox, Converter={StaticResource boolToVisibilityConverter}}">
 
                 <syncfusion:SfDataGrid.Columns>
                     <syncfusion:GridCheckBoxColumn HeaderText="#" MappingName="IsChecked" />
                     <syncfusion:GridTextColumn HeaderText="Name" MappingName="Name" />
-                    <syncfusion:GridTextColumn HeaderText="State" MappingName="ExportState" />
-                    
+                    <syncfusion:GridTextColumn HeaderText="Export State" MappingName="ExportState" />
+
                 </syncfusion:SfDataGrid.Columns>
 
             </syncfusion:SfDataGrid>
 
+
+            <!--  Data Grid Imports (ADJUST ME)  -->
+            <syncfusion:SfDataGrid
+                Grid.Row="1"
+                AllowEditing="False"
+                AllowFiltering="True"
+                AllowResizingColumns="True"
+                AllowSorting="True"
+                AutoGenerateColumns="False"
+                ColumnSizer="AutoLastColumnFill"
+                ItemsSource="{Binding Items}"
+                SelectionMode="Extended"
+                Visibility="{Binding Path=IsChecked, ElementName=ImportCheckBox, Converter={StaticResource boolToVisibilityConverter}}">
+
+                <syncfusion:SfDataGrid.Columns>
+                    <syncfusion:GridCheckBoxColumn HeaderText="#" MappingName="IsChecked" />
+                    <syncfusion:GridTextColumn HeaderText="Name" MappingName="Name" />
+                    <syncfusion:GridTextColumn HeaderText="Import State" MappingName="ImportState" />
+
+                </syncfusion:SfDataGrid.Columns>
+
+            </syncfusion:SfDataGrid>
 
 
             <!--  Bottom Button Panel Main  -->
 
             <Grid Grid.Row="2" Background="{DynamicResource ContentBackgroundAlt2}">
                 <StackPanel
-                 HorizontalAlignment="Center"
-                 VerticalAlignment="Center"
-                 Orientation="Horizontal"
-                 >
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center"
+                    Orientation="Horizontal">
                     <Button
-                     Height="35"
-                     Background="{DynamicResource ContentBackgroundAlt}"
-                     Content="Process Selected"
-                     Style="{DynamicResource MessageBoxButtonStyle}"
-                     Command="{Binding ProcessSelectedCommand}"
-                     />
+                        Height="35"
+                        Background="{DynamicResource ContentBackgroundAlt}"
+                        Command="{Binding ProcessSelectedCommand}"
+                        Content="Process Selected"
+                        Style="{DynamicResource MessageBoxButtonStyle}" />
                     <Button
-                     Height="35"
-                     Background="{DynamicResource ContentBackgroundAlt}"
-                     Content="Process All"
-                     Style="{DynamicResource MessageBoxButtonStyle}"
-                     Command="{Binding ProcessAllCommand}"
-                     />
+                        Height="35"
+                        Background="{DynamicResource ContentBackgroundAlt}"
+                        Command="{Binding ProcessAllCommand}"
+                        Content="Process All"
+                        Style="{DynamicResource MessageBoxButtonStyle}" />
                     <Button
-                     Height="35"
-                     Background="{DynamicResource ContentBackgroundAlt}"
-                     Content="Process Imports"
-                     Style="{DynamicResource MessageBoxButtonStyle}"
-                     Command="{Binding ProcessImportsCommand}"
-                     />
+                        Height="35"
+                        Background="{DynamicResource ContentBackgroundAlt}"
+                        Command="{Binding ProcessImportsCommand}"
+                        Content="Process Imports"
+                        Style="{DynamicResource MessageBoxButtonStyle}" />
                     <Button
-                     Height="35"
-                     Background="{DynamicResource ContentBackgroundAlt}"
-                     Content="Process Exports"
-                     Style="{DynamicResource MessageBoxButtonStyle}"
-                     Command="{Binding ProcessExportsCommand}"
-                     />
+                        Height="35"
+                        Background="{DynamicResource ContentBackgroundAlt}"
+                        Command="{Binding ProcessExportsCommand}"
+                        Content="Process Exports"
+                        Style="{DynamicResource MessageBoxButtonStyle}" />
 
                 </StackPanel>
 
@@ -113,11 +145,10 @@
 
         <!--  Special Import / Export Options  -->
         <Grid
-         Grid.RowSpan="4"
-         Grid.ColumnSpan="4"
-         Background="{DynamicResource ContentBackgroundAlt2}"
-         Visibility="Collapsed"
-         >
+            Grid.RowSpan="4"
+            Grid.ColumnSpan="4"
+            Background="{DynamicResource ContentBackgroundAlt2}"
+            Visibility="Collapsed">
             <Grid.RowDefinitions>
                 <RowDefinition Height="80" />
                 <RowDefinition Height="5*" />
@@ -127,52 +158,47 @@
                 <hc:Divider Margin="90,0,50,0" VerticalAlignment="Center" />
 
                 <TextBlock
-                 Margin="10"
-                 HorizontalAlignment="Left"
-                 VerticalAlignment="Center"
-                 FontSize="15"
-                 Text="EXTENSION"
-                 />
+                    Margin="10"
+                    HorizontalAlignment="Left"
+                    VerticalAlignment="Center"
+                    FontSize="15"
+                    Text="EXTENSION" />
 
 
                 <Button
-                 Width="60"
-                 Height="35"
-                 Margin="10"
-                 HorizontalAlignment="Right"
-                 VerticalAlignment="Center"
-                 Background="{DynamicResource ContentBackgroundAlt}"
-                 Content="ADD"
-                 FontSize="12"
-                 Style="{DynamicResource MahApps.Styles.Button.ToolBar}"
-                 />
+                    Width="60"
+                    Height="35"
+                    Margin="10"
+                    HorizontalAlignment="Right"
+                    VerticalAlignment="Center"
+                    Background="{DynamicResource ContentBackgroundAlt}"
+                    Content="ADD"
+                    FontSize="12"
+                    Style="{DynamicResource MahApps.Styles.Button.ToolBar}" />
             </Grid>
 
             <Grid
-             x:Name="ContentLinkForSpecialExportOrImportOptions"
-             Grid.Row="1"
-             Margin="2"
-             Background="{DynamicResource ContentBackgroundAlt}"
-             />
+                x:Name="ContentLinkForSpecialExportOrImportOptions"
+                Grid.Row="1"
+                Margin="2"
+                Background="{DynamicResource ContentBackgroundAlt}" />
 
         </Grid>
 
 
         <!--  Exporting/Importing Overlay  -->
         <Grid
-         Grid.RowSpan="4"
-         Grid.ColumnSpan="4"
-         Background="Gray"
-         Visibility="Collapsed"
-         >
+            Grid.RowSpan="4"
+            Grid.ColumnSpan="4"
+            Background="Gray"
+            Visibility="Collapsed">
             <syncfusion:SfBusyIndicator AnimationType="Gear" />
             <TextBlock
-             x:Name="ImportExportOverlayText"
-             Margin="0,65,0,0"
-             HorizontalAlignment="Center"
-             VerticalAlignment="Center"
-             Text="Files are being processed..."
-             />
+                x:Name="ImportExportOverlayText"
+                Margin="0,65,0,0"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                Text="Files are being processed..." />
         </Grid>
 
 
